Add slot /count endpoint
